<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sv_game_setup"
    android:background="@drawable/findyourlikings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_your_likings"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:id="@+id/tv_game_mode_title"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

                <LinearLayout
                    android:id="@+id/layout_randomStartTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                       >

                    <EditText
                        android:id="@+id/et_startTitle"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_starting_concept"
                        android:text="Quiz"
                        android:textColor="#363A43"
                        android:textColorHint="#7A8089"
                        />

                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageButton
                        android:id="@+id/btn_randomStartTitle"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_randomicon"
                        android:background="@null"
                        android:scaleType="fitCenter"
                        android:layout_marginStart="16dp"
                        />

                </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_randomGoalTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                >

                <EditText
                    android:id="@+id/et_goalTitle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_concept_you_want_reach"
                    android:text="Europe"
                    android:textColor="#363A43"
                    android:textColorHint="#7A8089"
                    />

            </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/btn_randomGoalTitle"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_randomicon"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:layout_marginStart="16dp"
                    />


            </LinearLayout>

            <Button
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/design_default_color_on_primary"
                android:text="Start"
                android:textSize="18sp"
                android:textColor="@color/white"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/enter_a_filter_keyword"
                android:textColor="#363A43"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_Keyword"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_a_keyword"
                        android:textColor="#363A43"
                        android:textColorHint="#7A8089"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Additional EditText and Random Button -->

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/specify_the_category"
                android:textColor="#363A43"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    >

                    <EditText
                        android:id="@+id/et_Category"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_specified_category"
                        android:textColor="#363A43"
                        android:textColorHint="#7A8089"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/btn_randomCategory"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_randomicon"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:layout_marginStart="16dp"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/btn_main_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/main_menu"
                android:textColor="@color/white"
                android:layout_marginStart="16dp"
                android:onClick="goToMainMenuActivity" />

            <Button
                android:id="@+id/btn_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/profile"
                android:textColor="@color/white"
                android:layout_marginStart="16dp"
                android:onClick="goToProfileActivity" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>